--- a/pages/me/discount/discount.wxss
+++ b/pages/me/discount/discount.wxss
@@ -36,3 +36,13 @@
   width: 80rpx;
   height: 80rpx;
 }
+.offf{
+  float: left;
+  width: 100%;
+  text-align: center;
+  margin-top: 60rpx;
+  font-weight: 600;
+  color: #999;
+  font-size: 40rpx;
+  
+}
